<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4fc"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextEntrarCorreoElectrónico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/ETCorreoElectronico"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textViewCorreoElectronico" />

    <TextView
        android:id="@+id/textViewContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/TVContraseña"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCorreoElectronico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Correo Electrónico"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEntrarContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/ETContraseña"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewContraseña" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.76" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#6074ac"
        android:text="Entrar"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxNoCerrarSesión"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CBNoCerrarSesión"
        android:textColor="#585e78"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrarCorreoElectrónico" />

    <TextView
        android:id="@+id/textViewOlvidadoContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:contextClickable="true"
        android:linksClickable="true"
        android:longClickable="true"
        android:text="@string/TVOlvidadoContraseña"
        android:textColor="#585e78"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrarContraseña" />

    <TextView
        android:id="@+id/textViewRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/TVRegistrate"
        android:textColor="#36456a"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxNoCerrarSesión" />

    <TextView
        android:id="@+id/textViewEsGratis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/TVGratis"
        android:textColor="#424f6c"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrate" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TVRegistrarNombre"
        android:textColor="#585e78"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsGratis" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.34" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ETRegistrarNombre"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNombre"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textViewNombre" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TVRegistrarApellidos"
        android:textColor="#585e78"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/ETRegistrarApellido"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApellidos"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textViewApellidos" />

    <TextView
        android:id="@+id/textViewRegistrarCorreoElectrónico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TVRegistrarCorreoElectronico"
        android:textColor="#585e78"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellidos" />

    <EditText
        android:id="@+id/editTextRegistrarCorreoElectronico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/ETRegistrarCorreoElectronico"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRegistrarCorreoElectrónico"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textViewRegistrarCorreoElectrónico" />

    <TextView
        android:id="@+id/textViewContraseñaNueva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TVContraseñaNueva"
        android:textColor="#585e78"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrarCorreoElectrónico" />

    <EditText
        android:id="@+id/editTextContraseñaNueva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/ETContraseñaNueva"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewContraseñaNueva"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textViewContraseñaNueva" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TVSexo"
        android:textColor="#585e78"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textViewContraseñaNueva" />

    <TextView
        android:id="@+id/textViewFechaNacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TVFNacimiento"
        android:textColor="#585e78"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo" />

    <TextView
        android:id="@+id/textViewPorquéInformación"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="¿Por qué tengo que dar esta información?"
        android:textColor="#5d6a8c"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/editTextFNacimiento" />

    <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSexo"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#6074ac"
        android:drawableLeft="@drawable/baseline_how_to_reg_24"
        android:text="Regístrate"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/textViewPorquéInformación" />

    <Button
        android:id="@+id/buttonSeparador"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#a4acbc"
        android:clickable="false"
        android:contextClickable="false"
        android:linksClickable="false"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegistrarse" />

    <TextView
        android:id="@+id/textViewCrearPágina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Crear una página"
        android:textColor="#566994"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeparador" />

    <TextView
        android:id="@+id/textViewFamosoGrupoEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="para un famoso, grupo de música o empresa"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCrearPágina"
        app:layout_constraintStart_toEndOf="@+id/textViewCrearPágina"
        app:layout_constraintTop_toTopOf="@+id/textViewCrearPágina" />

    <EditText
        android:id="@+id/editTextFNacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/ETRegistrarFecha"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFechaNacimiento"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/textViewFechaNacimiento" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRegistrate"
        app:layout_constraintStart_toEndOf="@+id/textViewRegistrate"
        app:layout_constraintTop_toTopOf="@+id/textViewRegistrate"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCorreoElectronico"
        app:layout_constraintStart_toEndOf="@+id/textViewCorreoElectronico"
        app:layout_constraintTop_toTopOf="@+id/textViewCorreoElectronico"
        app:srcCompat="@drawable/email" />

</androidx.constraintlayout.widget.ConstraintLayout>